Issue 3233:  	 Break on This Error for CSS errors causes internal errors
Now only error.category==='js' will have break on error 

http://code.google.com/p/fbug/source/detail?r=7329

--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -235,6 +235,10 @@
     opacity: 0.1;
 }
 
+.errorUnbreakable {
+    display: none;
+}
+
 .hasBreakSwitch .errorBreak {
     display: inline;
 }
